@@ -1,5 +1,15 @@
 2017-03-28  Alexey Proskuryakov  <ap@apple.com>
 
+        Bot watcher's dashboard has separate settings for "mac" and "macos"
+        https://bugs.webkit.org/show_bug.cgi?id=170164
+
+        Reviewed by Tim Horton.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/Settings.js:
+        (Settings.prototype.parsePlatformFamily): Aded a special case for "macos".
+
+2017-03-28  Alexey Proskuryakov  <ap@apple.com>
+
         Fix dashboard test results on the dashboard
         https://bugs.webkit.org/show_bug.cgi?id=170158
 
